--- a/index.html
+++ b/index.html
@@ -7,9 +7,40 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="main-container">
+    <div class="display-screen"></div>
+    <div class="btns">
+        <div class="first-row">
+        <button class="btn" id="ac">AC</button>
+        <button class="btn" id="delete">DEL</button>
+        <button class="btn" id="percent">%</button>
+        <button class="btn" id="divide">/</button>
+        </div>
+        <div class="second-row">
+        <button class="btn" id="seven">7</button>
+        <button class="btn" id="eight">8</button>
+        <button class="btn" id="nine">9</button>
+        <button class="btn" id="multiply">*</button>
+    </div>
+    <div class="third-row">
+        <button class="btn" id="four">4</button>
+        <button class="btn" id="five">5</button>
+        <button class="btn" id="six">6</button>
+        <button class="btn" id="minus">-</button>
+    </div>
+    <div class="fourth-row">
+        <button class="btn" id="one">1</button>
+        <button class="btn" id="two">2</button>
+        <button class="btn" id="three">3</button>
+        <button class="btn" id="plus">+</button>
+    </div>
+    <div class="fifth-row">
+        <button class="btn" id="zero">0</button>
+        <button class="btn" id="dot">.</button>
+        <button class="btn" id="equal">=</button>
+    </div>
     
-
-    <div class="main-container"></div>
+</div>
     <script src="script.js"> </script>
 </body>
 </html>
