add colors to the buttons and text, also try to make the buttons responsive(still work needed to be done)

--- a/index.html
+++ b/index.html
@@ -10,34 +10,34 @@
     <div class="main-container">
     <div class="display-screen"></div>
     <div class="btns">
-        <div class="first-row">
-        <button class="btn" id="ac">AC</button>
-        <button class="btn" id="delete">DEL</button>
-        <button class="btn" id="percent">%</button>
-        <button class="btn" id="divide">/</button>
+        <div class="rows first-row">
+        <button class="btn ac-items" id="ac">AC</button>
+        <button class="btn ac-items" id="delete">DEL</button>
+        <button class="btn ac-items" id="percent">%</button>
+        <button class="btn operations" id="divide">/</button>
         </div>
-        <div class="second-row">
-        <button class="btn" id="seven">7</button>
-        <button class="btn" id="eight">8</button>
-        <button class="btn" id="nine">9</button>
-        <button class="btn" id="multiply">*</button>
+        <div class="rows second-row">
+        <button class="btn number" id="seven">7</button>
+        <button class="btn number" id="eight">8</button>
+        <button class="btn  number" id="nine">9</button>
+        <button class="btn operations" id="multiply">*</button>
     </div>
-    <div class="third-row">
-        <button class="btn" id="four">4</button>
-        <button class="btn" id="five">5</button>
-        <button class="btn" id="six">6</button>
-        <button class="btn" id="minus">-</button>
+    <div class="rows third-row">
+        <button class="btn number" id="four">4</button>
+        <button class="btn number" id="five">5</button>
+        <button class="btn number" id="six">6</button>
+        <button class="btn operations" id="minus">-</button>
     </div>
-    <div class="fourth-row">
-        <button class="btn" id="one">1</button>
-        <button class="btn" id="two">2</button>
-        <button class="btn" id="three">3</button>
-        <button class="btn" id="plus">+</button>
+    <div class="rows fourth-row">
+        <button class="btn number" id="one">1</button>
+        <button class="btn number" id="two">2</button>
+        <button class="btn number" id="three">3</button>
+        <button class="btn operations" id="plus">+</button>
     </div>
-    <div class="fifth-row">
-        <button class="btn" id="zero">0</button>
-        <button class="btn" id="dot">.</button>
-        <button class="btn" id="equal">=</button>
+    <div class="rows fifth-row">
+        <button class="btn number" id="zero">0</button>
+        <button class="btn number" id="dot">.</button>
+        <button class="btn operations" id="equal">=</button>
     </div>
     
 </div>
