add the event delegation to select multiple buttons using single function. update the input field by using the event listeners

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="main-container">
-    <div class="display-screen"></div>
+    <div class="display-screen">
+        <div id="input-field"></div>
+        <div id="output-field"></div>
+    </div>
     <div class="btns">
         <div class="rows first-row">
         <button class="btn ac-items" id="ac">AC</button>
