improving the code

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="rows fifth-row">
         <button class="btn number" id="zero">0</button>
         <button class="btn number" id="dot">.</button>
-        <button class="btn operations" id="equal">=</button>
+        <button class="btn equals-to" id="equal">=</button>
     </div>
     
 </div>
