--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="rows first-row">
         <button class="btn ac-items" id="ac">AC</button>
         <button class="btn ac-items" id="delete">DEL</button>
-        <button class="btn ac-items" id="percent" value="%">%</button>
+        <button class="btn operations" id="percent" value="%">%</button>
         <button class="btn operations" id="divide"value = "/">/</button>
         </div>
         <div class="rows second-row">
