all the functions are not functioning properly except the percentage option

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="main-container">
     <div class="display-screen">
-        <div id="input-field"></div>
-        <div id="output-field"></div>
+        <div  class="input-display" id="input-field"></div>
+        <div class="operation-display" id="output-field"></div>
 
     </div>
     <div class="btns">
@@ -45,6 +45,6 @@
     </div>
     
 </div>
-    <script src="script.js"> </script>
+    <script type=" text/javascript" src="script.js" defer> </script>
 </body>
 </html>
