--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
     </div>
     
 </div>
+<!-- 
+<footer style="text-align: center; padding: 10px; background-color: #f1f1f1; position: fixed; width: 100%; bottom: 0;">
+    <p>&copy; 2024 rijalNR45: <a href="https://github.com/your-username" target="_blank">your-username</a>. All rights reserved.</p>
+</footer> -->
+
     <script type=" text/javascript" src="script.js" defer> </script>
 </body>
 </html>
