--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+   
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="android-chrome-192x192.png">
     <title>Calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="main-container">
+    <div class="calculator">
     <div class="display-screen">
         <div  class="input-display" id="input-field"></div>
         <div class="operation-display" id="output-field"></div>
@@ -41,8 +44,9 @@
         <button class="btn number" id="zero" value="0">0</button>
         <button class="btn number" id="dot" value=".">.</button>
         <button class="btn" id="equal" value="=">=</button>
+        </div>
     </div>
-    
+</div>
 </div>
     <script type=" text/javascript" src="script.js" defer> </script>
 </body>
